Fix tasks times